--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "locd": "cross-env ENV_PATH=.env.locd nuxt --dotenv DOTENV_CONFIG_PATH=.env.locd",
     "locp": "cross-env ENV_PATH=.env.locp nuxt --dotenv DOTENV_CONFIG_PATH=.env.locp",
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "cross-env ENV_PATH=.env.locd nuxt build --dotenv DOTENV_CONFIG_PATH=.env.locd",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/style-resources": "^1.2.2",
     "core-js": "^3.25.3",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
     "nuxt": "^2.15.8",
+    "sass": "^1.71.1",
+    "sass-loader": "^10.1.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
