--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.10",
     "defu": "^6.1.4",
     "nuxt": "^3.10.3",
+    "reset-css": "^5.0.1",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "vue": "^3.4.21",
