Composition API 리펙토링2
#강의내용
Options API로 작성하던 코드를 Composition API로 변경하는 중

#추가내용
- dayjs 삭제 후 dayjs-nuxt로 변경 : nuxt3 변경 후 공식문서 가이드에 따름
- axios가 아닌 useFetch 사용시작, 이후 axios 제거 예정

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nuxtjs/style-resources": "^1.2.2",
     "@vue/compiler-sfc": "^3.4.21",
     "cross-env": "^7.0.3",
-    "dayjs": "^1.11.10",
+    "dayjs-nuxt": "^2.1.9",
     "defu": "^6.1.4",
     "nuxt": "^3.10.3",
     "reset-css": "^5.0.1",
